# python_tdd

./: .pre-commit-config.yaml  pyproject.toml
store/: main.py
store/controller/: product.py
store/core/: config.py  exceptions.py
store/models/: base.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/controllers/: test_product.py
tests/schemas/: conftest.py  conftest.py  # (editar este arquivo)  factories.py  test_product.py
tests/usecases/: test_product.py
