[project]
name = "tdd_project"
version = "0.0.1"
description = "Training"
authors = [
    {name = "iamdiniz",email = "guilhermeplays03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopots = [
    "--strict-config",
    "--strict-markers",
    "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
